[gd_scene load_steps=8 format=3 uid="uid://d0rrj0rnb3tdo"]

[ext_resource type="FontFile" uid="uid://bl8e15dtp0unf" path="res://addons/prompto/fonts/ComicNeue-Bold.ttf" id="1_b76ta"]
[ext_resource type="Script" path="res://addons/prompto/chat/chat.gd" id="1_r4llr"]
[ext_resource type="PackedScene" uid="uid://y16c466rq77f" path="res://addons/prompto/health_indicator.tscn" id="2_omo0d"]

[sub_resource type="GDScript" id="GDScript_vhn8d"]
script/source = "@tool
extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	var session_manager = get_node(\"/root/PromptoManager\")
	var current_user = session_manager.session_store.username
	set_text(current_user)

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="GDScript" id="GDScript_vl5el"]
script/source = "@tool
extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	set_process(false)

func _pressed():
	var prompto_manager = get_node(\"/root/PromptoManager\")
	prompto_manager.attempt_logout()

	
"

[sub_resource type="LabelSettings" id="LabelSettings_wm857"]
font = ExtResource("1_b76ta")
font_size = 38
font_color = Color(0.843137, 0.843137, 0.843137, 1)

[sub_resource type="GDScript" id="GDScript_rtwmb"]
script/source = "@tool
extends TextEdit 

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _gui_input(event):
	if self.has_focus() and event is InputEventKey and event.pressed:
		
		if Input.is_key_pressed(KEY_SHIFT) and event.keycode == KEY_ENTER:
			self.insert_text_at_caret(\"\\n\")
			return
			
		if event.keycode == KEY_ENTER:
			var prompto_manager = get_node(\"/root/PromptoManager\")
			var prompt = self.text.strip_edges()
			
			self.owner.add_message(message)
			var response = await prompto_manager.create_chat(prompt)
			
			
			var rq_message = response['messages'][-2]
			var rq_message_entry = MessageEntry.new(req_msg['id'], MessageEntry.MessageRole.USER, req_msg['content'])
			
			
			var res_msg = response['messages'][-1]
			var response_message = MessageEntry.new(response_message_str['id'], MessageEntry.MessageRole.ASSISTANT, response_message_str['content'])
			self.owner.add_message(response_message)
			
			self.text = \"\"
			self.accept_event()
			
# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Prompto Chat" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r4llr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10

[node name="HealthIndicator" parent="VBoxContainer/Header/HBoxContainer" instance=ExtResource("2_omo0d")]
layout_mode = 2
init_status = true
status_changed = Signal()

[node name="ResetButton" type="Button" parent="VBoxContainer/Header/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="UserLabel" type="Label" parent="VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
text = "lukas.boehme"
vertical_alignment = 1
script = SubResource("GDScript_vhn8d")

[node name="Logout" type="Button" parent="VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
text = "Logout"
script = SubResource("GDScript_vl5el")

[node name="PromptoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 180)
layout_mode = 2
text = "Prompto"
label_settings = SubResource("LabelSettings_wm857")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollableMessageContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="MessageContainer" type="VBoxContainer" parent="VBoxContainer/ScrollableMessageContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="InputField" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 256)
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Send a message to Prompto"
script = SubResource("GDScript_rtwmb")

[connection signal="pressed" from="VBoxContainer/Header/HBoxContainer/ResetButton" to="." method="reset"]
